@@ -1,8 +1,8 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.6-1
-Date: 2015-09-25
+Version: 1.6-2
+Date: 2015-11-02
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
@@ -10,7 +10,6 @@ License: GPL (>= 2)
 LazyLoad: yes
 Depends: R (>= 2.15.0), aqp
 Imports: plyr, Hmisc, RCurl, XML, sp, reshape
-Suggests: lattice, dismo, raster, rgdal, jsonlite, RODBC, httr, XMLSchema, SSOAP
+Suggests: lattice, dismo, raster, rgdal, jsonlite, RODBC, httr
 Repository: CRAN
-Additional_repositories: http://www.omegahat.org/R
 URL: http://aqp.r-forge.r-project.org/
